Products.MeetingLiege Changelog
===============================

3.4 (unreleased)
----------------
- Finance advisers of an item are now able to add decision annexes
  when the item is decided